--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -77,9 +77,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
-
                                     <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
-
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -122,6 +120,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -163,6 +162,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -204,6 +204,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -245,6 +246,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -286,6 +288,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -327,6 +330,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -371,6 +375,7 @@
                                 <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -412,6 +417,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -453,6 +459,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -494,6 +501,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -535,6 +543,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -576,6 +585,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -617,6 +627,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -662,6 +673,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -703,6 +715,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -743,7 +756,7 @@
                                 <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
-
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -785,6 +798,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -826,6 +840,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -867,6 +882,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
@@ -908,6 +924,7 @@
                                 <div ui-draggable="true" drag="orden" ng-if="isadmin"  on-drop-success="dropSuccessHandler($event,$index,orden)">
 
                                     <div class="divorden divdenbora" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denbora" onbeforesave="updateDenbora($data, this)" >Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden divdenborafin" ng-if="isadmin" data-miid="{{ orden._id }}" editable-text="orden.denborafin" onbeforesave="updateDenboraFin($data, this)" >Orduak:{{orden.denborafin}}</div>
                                     <span
                                         data-miid="{{ orden._id }}"
                                         data-fetxa="{{orden.fetxa}}"
