--- a/static/pages/gantt.html
+++ b/static/pages/gantt.html
@@ -12,16 +12,31 @@
           <button class="btn btn-primary btn-sm" ng-click="yearscale()"><span class="glyphicon glyphicon-th"> Vista Año</span></button>
       </div>
       <div class="btn-group" role="group">
-          <button class="btn btn-primary btn-sm" datepicker-popup="{{format}}" name="dtgantini" ng-model="dtgantini"
-                        is-open="datepickers.dtgantini" datepicker-options="dateOptions" ng-required="true" close-text="Close"
-                        ng-click="open($event,'dtgantini')" ng-change="selectDate(dtgantini)"><i
-                        class="glyphicon glyphicon-calendar">Desde</i>
+          <button class="btn btn-primary btn-sm"
+              datepicker-popup="{{format}}"
+              name="dtganttini"
+              ng-model="dtganttini"
+              is-open="datepickers.dtganttini"
+              datepicker-options="dateOptions"
+              ng-required="true"
+              close-text="Close"
+              ng-click="open($event,'dtganttini')"
+              ng-change="selectDatedtganttini(dtganttini)">
+                <i class="glyphicon glyphicon-calendar">Desde: {{ dtganttini | date:'dd/MM/yyyy' }}</i>
           </button>
-          <button class="btn btn-primary btn-sm" datepicker-popup="{{format}}" name="dtgantfin" ng-model="dtgantfin"
-                  is-open="datepickers.dtgantfin" datepicker-options="dateOptions" ng-required="true" close-text="Close"
-                  ng-click="open($event,'dtgantfin')" ng-change="selectDate(dtgantfin)"><i
-                  class="glyphicon glyphicon-calendar">Hasta</i>
+          <button class="btn btn-primary btn-sm"
+              datepicker-popup="{{format}}"
+              name="dtganttfin"
+              ng-model="dtganttfin"
+              is-open="datepickers.dtganttfin"
+              datepicker-options="dateOptions"
+              ng-required="true"
+              close-text="Close"
+              ng-click="open($event,'dtganttfin')"
+              ng-change="selectDatedtganttfin(dtganttfin)">
+                <i class="glyphicon glyphicon-calendar">Hasta: {{ dtganttfin | date:'dd/MM/yyyy' }}</i>
           </button>
+          <button class="btn btn-warning btn-sm" ng-click="filtrarGantt()">Filtrar</button>
       </div>
       <div class="btn-group pull-right" role="group" >
           <button class="btn btn-primary btn-sm left">Export to PDF</button>
