--- a/static/pages/gantt.html
+++ b/static/pages/gantt.html
@@ -10,6 +10,38 @@
   .gantt_selected .weekend{
     background: #f7eb91;
   }
+  .complete_button{
+        margin-top: 1px;
+        background-image:url("common/v_complete.png");
+        width: 20px;
+    }
+    .dhx_btn_set.complete_button_set{
+        background: #ACCAAC;
+        color: #454545;
+        border: 1px solid #94AD94;
+    }
+    .completed_task{
+        border:1px solid #94AD94;
+    }
+    .completed_task .gantt_task_progress{
+        background: #ACCAAC;
+    }
+
+    .dhtmlx-completed{
+        border-color: #669e60;
+    }
+    .dhtmlx-completed div {
+        background: #81c97a;
+    }
+    .red .gantt_cell, .odd.red .gantt_cell,
+    .red .gantt_task_cell, .odd.red .gantt_task_cell{
+        background-color: #FDE0E0;
+    }
+    .green .gantt_cell, .odd.green .gantt_cell,
+    .green .gantt_task_cell, .odd.green .gantt_task_cell {
+        background-color: #BEE4BE;
+    }
+
 </style>
 
 
@@ -19,11 +51,11 @@
     <span us-spinner spinner-key="spinner-gantt"></span>
   <div class="row">
       <div class="btn-group" role="group" >
-          <button class="btn btn-primary btn-sm" ng-click="ganttgridtoogle()">AA</button>
-          <button class="btn btn-primary btn-sm" ng-click="originalscale()"><span class="glyphicon glyphicon-eye-open">&nbsp;Origen</span></button>
-          <button class="btn btn-primary btn-sm" ng-click="dayscale()"><span class="glyphicon glyphicon-sound-dolby">&nbsp;Dias</span></button>
-          <button class="btn btn-primary btn-sm" ng-click="weekscale()"><span class="glyphicon glyphicon-th-list">&nbsp;Semanas</span></button>
-          <button class="btn btn-primary btn-sm" ng-click="monthscale()" ><span class="glyphicon glyphicon-calendar">&nbsp;Mes</span></button>
+          <button class="btn btn-primary btn-sm" ng-click="ganttgridtoogle()"><i class="fa fa-toggle-on"></i>&nbsp;</button>
+          <button class="btn btn-primary btn-sm" ng-click="originalscale()"><i class="fa fa-undo"></i>&nbsp;Origen</button>
+          <button class="btn btn-primary btn-sm" ng-click="dayscale()"><i class="fa fa-calendar-o"></i>&nbsp;Dias</button>
+          <button class="btn btn-primary btn-sm" ng-click="weekscale()"><i class="fa fa-server"></i>&nbsp;Semanas</button>
+          <button class="btn btn-primary btn-sm" ng-click="monthscale()" ><i class="fa fa-calendar"></i>&nbsp;Mes</button>
           <button class="btn btn-primary btn-sm" ng-click="yearscale()"><span class="glyphicon glyphicon-th">&nbsp;Año</span></button>
       </div>
       <div class="btn-group" role="group">
@@ -37,7 +69,7 @@
               close-text="Close"
               ng-click="open($event,'dtganttini')"
               ng-change="selectDatedtganttini(dtganttini)">
-                <i class="glyphicon glyphicon-calendar">&nbsp;Desde: {{ dtganttini | date:'dd/MM/yyyy' }}</i>
+                <i class="fa fa-calendar"></i>&nbsp;Desde: {{ dtganttini | date:'dd/MM/yyyy' }}
           </button>
           <button class="btn btn-primary btn-sm"
               datepicker-popup="{{format}}"
@@ -49,14 +81,14 @@
               close-text="Close"
               ng-click="open($event,'dtganttfin')"
               ng-change="selectDatedtganttfin(dtganttfin)">
-                <i class="glyphicon glyphicon-calendar">&nbsp;Hasta: {{ dtganttfin | date:'dd/MM/yyyy' }}</i>
+                <i class="fa fa-calendar"></i>&nbsp;Hasta: {{ dtganttfin | date:'dd/MM/yyyy' }}
           </button>
-          <button class="btn btn-warning btn-sm" ng-click="filtrarGantt()">Filtrar</button>
+          <button class="btn btn-warning btn-sm" ng-click="filtrarGantt()"><i class="fa fa-filter"></i>&nbsp;Filtrar</button>
       </div>
       <div class="btn-group pull-right" role="group" >
-          <button class="btn btn-primary btn-sm left" onclick='gantt.exportToPDF()'>Export to PDF</button>
-          <button class="btn btn-primary btn-sm left" onclick='gantt.exportToPNG()'>Export to PNG</button>
-          <button class="btn btn-primary btn-sm left" onclick='gantt.exportToExcel()'>Export to Excel</button>
+          <button class="btn btn-primary btn-sm left" onclick='gantt.exportToPDF()'><i class="fa fa-file-pdf-o"></i>&nbsp;Export to PDF</button>
+          <button class="btn btn-primary btn-sm left" onclick='gantt.exportToPNG()'><i class="fa fa-picture-o"></i>&nbsp;Export to PNG</button>
+          <button class="btn btn-primary btn-sm left" onclick='gantt.exportToExcel()'><i class="fa fa-file-excel-o"></i>&nbsp;Export to Excel</button>
       </div>
 
 
