--- a/static/pages/live.html
+++ b/static/pages/live.html
@@ -4,12 +4,16 @@
   <div class="row">&nbsp;</div>
   <div class="row" ng-controller="liveController">
 
+  <div class="row">
+    <p>Los datos se actualizan cada 30 segundos:</p>
+  </div>
+
     <div class="row" ng-repeat="of in lOFs">
-      <h3> <span class="label label-default">Articulo:{{ of.orden }}</span>  <span class="label label-primary">OF: {{ of.of }}</span> </h3>
-      <h5> A Fabricar: {{ of.QFabricar }} - Fabricadas: {{ of.QFabricada }} - Progreso: {{ of.progress }}%</h5>
+      <h3> <span class="label label-default">Articulo:&nbsp;{{ of.orden }}</span>&nbsp;<span class="label label-primary">OF:&nbsp; {{ of.of }}</span> </h3>
+      <h5> A Fabricar:&nbsp; {{ of.QFabricar }} - Fabricadas:&nbsp; {{ of.QFabricada }} - Progreso:&nbsp; {{ of.progress }}%</h5>
       <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="{{of.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{of.progress}}%;">
-          <span class="sr-only">60% Complete</span>
+          <span class="sr-only">{{of.progress}}% Completado</span>
         </div>
       </div>
     </div>
